<resources>
    <string name="app_name">TaskApp</string>

    <!-- Status Tasks - Fragment name   -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

    <!-- Generic   -->
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro! Por favor tente novamente mais tarde.</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada.</string>
    <string name="text_load_task">Carregando tarefas...</string>
    <string name="text_delete_success_task">Tarefa removida com sucesso!</string>
    <string name="text_title_dialog_confirm_delete_task">Excluir tarefa</string>
    <string name="text_message_dialog_confirm_delete_task">Tem certeza que deseja excluir a tarefa permanentemente?</string>
    <string name="text_button_dialog_confirm_delete_task">Excluir</string>

    <!-- Login Fragment  -->
    <string name="email_empty_warning_login">Preencha seu e-mail</string>
    <string name="password_empty_warning_login">Preencha sua senha</string>
    <string name="text_button_login">Login</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>

    <!-- Register Fragment  -->
    <string name="email_empty_warning_register">Preencha um e-mail válido.</string>
    <string name="password_empty_warning_register">Preencha uma senha.</string>
    <string name="text_button_register">Criar conta</string>
    <string name="text_title_toolbar_register_account_fragment">Criar conta</string>

    <!-- Recover Account Fragment   -->
    <string name="text_info_recover_account_fragment">Informe seu e-mail para receber os passos de como alterar sua senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover">Enviar e-mail</string>
    <string name="text_message_recover_account_fragment">Um link foi enviado para o seu e-mail. Por favor, siga o passo a passo presente nele.</string>

    <!-- Form Task Fragment -->
    <string name="description_empty_warning_form">Preencha uma descrição.</string>
    <string name="text_status_form_task">Status</string>
    <string name="text_title_toolbar_from_task_fragment">Nova Tarefa</string>
    <string name="text_description_form_task_fragment">Descrição</string>
    <string name="hint_edit_description">Ex. Passear com o cachorro</string>
    <string name="text_button_form_task_fragment">Salvar</string>
    <string name="text_save_success_form_task_fragment">Tarefa salva com sucesso</string>
    <string name="text_toolbar_update">Editando tarefa</string>

    <!-- Home Fragment   -->
    <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
    <string name="text_button_dialog_confirm_logout">Sair</string>
    <string name="text_message_dialog_confirm_logout">Você precisará fazer login novamente para acessar sua conta!</string>

    <!-- Errors Firebase Authentication -->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>


</resources>